[tool.poetry]
name = "stormlock"
version = "0.3.1"
description = "Simple distributed lock with support for multiple backends"
readme = "README.rst"
repository = "https://github.com/tmccombs/stormlock"
keywords = ["lock", "cli"]
authors = ["Thayne McCombs <astrothayne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
etcd3 = { version = "^0.12.0", optional = true }
redis = { version = "^4.5.4", optional = true }
boto3 = { version = "^1.26.100", optional = true }
psycopg = {extras = ["c"], version = "^3.1.8", optional = true }
mysql-connector-python = { version = "^8.0.21", optional = true }

[tool.poetry.group.types.dependencies]
types-redis = "^4.5.3"


[tool.poetry.group.lint.dependencies]
pylint = "^2.17.1"

[tool.poetry.extras]
etcd = ["etcd3"]
redis = ["redis"]
dynamodb = ["boto3"]
postgresql = ["psycopg"]
mysql = ["mysql-connector-python"]

[tool.poetry.plugins."stormlock.backends"]
"etcd" = "stormlock.backends.etcd:Etcd [etcd]"
"redis" = "stormlock.backends.redis:Redis [redis]"
"dynamodb" = "stormlock.backends.dynamodb:DynamoDB [dynamodb]"
"postgresql" = "stormlock.backends.postgresql:Postgresql [postgresql]"
"mysql" = "stormlock.backends.mysql:MySql [mysql]"

[tool.poetry.scripts]
stormlock = "stormlock.cli:run"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.pylint.messages_control]
disable = "W0511"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
