[tool.poetry]
name = "stormlock"
version = "0.4.0"
description = "Simple distributed lock with support for multiple backends"
readme = "README.rst"
repository = "https://github.com/tmccombs/stormlock"
keywords = ["lock", "cli"]
authors = ["Thayne McCombs <astrothayne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
redis = { version = "^5.0.0", optional = true }
boto3 = { version = "^1.26.100", optional = true }
psycopg = {extras = ["c"], version = "^3.1.8", optional = true }
mysql-connector-python = { version = "^8.1.0", optional = true }
grpcio = { version = "^1.57", optional = true }
protobuf = { version = "^4.21", optional = true }

[tool.poetry.group.lint.dependencies]
pylint = "^2.17.1"
"types-protobuf" = "^4.24"
"grpc-stubs" = "^1.53"
"boto3-stubs" = { version = "^1.26", extras = ["dynamodb"] }

[tool.poetry.extras]
etcd = ["grpcio", "protobuf"]
redis = ["redis"]
dynamodb = ["boto3"]
postgresql = ["psycopg"]
mysql = ["mysql-connector-python"]

[tool.poetry.plugins."stormlock.backends"]
"etcd" = "stormlock.backends.etcd:Etcd [etcd]"
"redis" = "stormlock.backends.redis:Redis [redis]"
"dynamodb" = "stormlock.backends.dynamodb:DynamoDB [dynamodb]"
"postgresql" = "stormlock.backends.postgresql:Postgresql [postgresql]"
"mysql" = "stormlock.backends.mysql:MySql [mysql]"

[tool.poetry.scripts]
stormlock = "stormlock.cli:run"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.pylint.messages_control]
disable = "W0511"

[tool.pylint.basic]
good-names = ["kv", "f"]

[tool.pylint.format]
max-line-length = "88"

[tool.black]
# exclude generated code
extend-exclude = 'proto'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
license = "Apache-2.0"

