[project]
name = "stormlock"
version = "0.4.1"
requires-python = ">=3.9"
description = "Simple distributed lock with support for multiple backends"
readme = "README.rst"
license = { text = "Apache-2.0"}
keywords = ["lock", "cli"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/tmccombs/stormlock"
Repository = "https://github.com/tmccombs/stormlock"

[[project.authors]]
name = "Thayne McCombs"
email = "astrothayne@gmail.com"

[[project.maintainers]]
name = "Thayne McCombs"
email = "astrothayne@gmail.com"

[project.optional-dependencies]
etcd = ["grpcio~=1.67", "protobuf~=5.28"]
redis = ["redis~=5.0"]
dynamodb = ["boto3~=1.26"]
postgresql = ["psycopg[c]~=3.1"]
mysql = ["mysql-connector-python~=9.1"]


[project.entry-points."stormlock.backends"]
"etcd" = "stormlock.backends.etcd:Etcd [etcd]"
"redis" = "stormlock.backends.redis:Redis [redis]"
"dynamodb" = "stormlock.backends.dynamodb:DynamoDB [dynamodb]"
"postgresql" = "stormlock.backends.postgresql:Postgresql [postgresql]"
"mysql" = "stormlock.backends.mysql:MySql [mysql]"

[project.scripts]
stormlock = "stormlock.cli:run"

[dependency-groups]
dev = ["types-protobuf~=5.28", "grpc-stubs~=1.53", "boto3-stubs[dynamodb]~=1.26"]

[tool.ruff]
# exclude generated code
extend-exclude = ['proto']

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_executable = "./.venv/bin/python"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.pylint.messages_control]
disable = "W0511"

[tool.pylint.basic]
good-names = ["kv", "f"]

[tool.pylint.format]
max-line-length = "88"

[tool.black]
# exclude generated code
extend-exclude = 'proto'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
